--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-cool-onclickoutside": "^1.4.8",
     "react-dom": "^16.13.1",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "use-places-autocomplete": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
