--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.13.1",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "use-places-autocomplete": "^1.3.5"
   },
   "scripts": {
