--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-collapsy": "0.0.10",
     "react-cool-onclickoutside": "^1.4.8",
     "react-dom": "^16.13.1",
     "react-places-autocomplete": "^7.2.1",
