--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "pagination-react-hooks": "^1.1.0",
     "react": "^16.13.1",
     "react-collapsy": "0.0.10",
     "react-cool-onclickoutside": "^1.4.8",
