--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "pagination-react-hooks": "^1.1.0",
     "react": "^16.13.1",
     "react-collapsy": "0.0.10",
     "react-cool-onclickoutside": "^1.4.8",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.3.2",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
